# cv

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  README.md  astro.config.mjs  create_pdf.sh  create_sample.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  test.bat  test.html  tsconfig.json
.github/scripts/: check_if_update_needed.py  get_version.py  utils.py
.github/workflows/: CI.yaml  check_version.yaml  fix_version.yaml  tag_commits_on_main.yaml  tag_version.yaml
cv/: config.py  do_all.py  utilities.py
cv/templates/: cover.html
input/: sample_1.yaml  sample_2.yaml
sample/input/: sample_1.yaml  sample_2.yaml
scripts/: export-pdf.mjs  image_transformations.py  process.py  pyproject.toml  sanitize-public-images.mjs
src/: config.py  config.yaml  do_all.py  index.py  sample_data.yaml  test.html  utilities.py
src/components/: BodySections.astro  ContactBlock.astro  CvPage.astro  PlainList.astro  SkillBars.astro
src/content/: config.yaml  data.yaml
src/layouts/: CoverDocument.astro  CvDocument.astro
src/lib/: cv.ts  styles.ts
src/pages/: index.astro
src/pages/print/: [name].astro
src/pages/v/: [name].astro
src/pages/view/: [name].astro
src/templates/: base.html  cv.html  cv_base.html  cv_no_bars.html  cv_with_bars.html
utilities/: image_transformations.py  images_jobs.py  jobs.yaml  photos.py  process.py
