[tool.black]
line-length = 100

[tool.poetry]
name = "cv"
version = "2.1.1"
# The CV website + PDF export now live in the Astro app (see package.json).
# This Poetry project only covers the optional image-processing pipeline in utilities/.
description = "Image-processing utilities for the Easy CV project"
authors = ["Arnau Villoro <arnau@villoro.com>"]
maintainers = ["Arnau Villoro <arnau@villoro.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/villoro/cv"

[tool.poetry.dependencies]
python = ">= 3.10, < 3.12"

[tool.poetry.group.utils.dependencies]
pillow = "^10.1.0"
pydantic = "^1.10.6"
tqdm = "^4.65.0"
vpalette = "^3.0.0"
rembg = "^2.0.52"
pyyaml = "^6.0"
jupyter = "^1.0.0"
notebook = "^7.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
